[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ca-tests"
version = "0.1.0"
description = "Coordinator tests for private circulatory_autogen model repos"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests that run private model test suites",
    "slow: long-running tests",
]
